test/Execute/SyntaxErrorTest/except_missing_open_paren.typh
try {
} except ValueError as e) {
}

"""stderr
syntax error: $FILE:2:9
  expected '('

    2 |  } except ValueError as e) {
                 ^
"""
